# Rustformer

./: .gitignore  Cargo.toml  IMPLEMENTATION_TODO.md  README.md  experiment_results.json
src/: attention.rs  bleu.rs  checkpoint.rs  complete_transformer.rs  config.rs  data.rs  generation.rs  inference.rs  lib.rs  loss.rs  main.rs  metrics.rs  model_args.rs  monitoring.rs  optimizer.rs  train.rs  transformer.rs
