[package]
name = "transformer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
rand = "0.8"
chrono = "0.4"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
rust_tokenizers = "8.0.0" 

[[bin]]
name = "transformer"
path = "src/main.rs"
